--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
             python -m pip install --upgrade pip 
             pip install flake8==6.0.0 flake8-isort==6.0.0
             pip install -r ./backend/requirements.txt
-        - name: Run flake8
+        - name: Run flake8 and test
           env:
             POSTGRES_USER: django_user
             POSTGRES_PASSWORD: django_password
@@ -41,5 +41,30 @@ jobs:
             python -m flake8 backend/
             cd backend/
             python manage.py test
+  build_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    run-on: ubuntu-latest
+    needs:
+      - python-tests
+    steps:
+      - 
+        name: Check out the repo
+        uses: actions/checkout@v3
+      - 
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login Doker
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASS }}
+      -
+        name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend/
+          push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/taski_backend:latest
 
  
