--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
             python manage.py test
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     needs:
       - python-tests
     steps:
