--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,5 +66,80 @@ jobs:
           context: ./backend/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/taski_backend:latest
+  frontend_tests:
+    name: Frontend test
+    runs-on: ubuntu-latest
+
+    steps:
+      -
+        name: Check out to repo
+        uses: actions/checkout@v3
+      -
+        name: Set up NoteJS
+        uses: actions/setup-node@v3
+        with:
+          node-versions: 18
+      -
+        name: Install dependencies
+        run: |
+          cd frondend/
+          npm ci
+      -
+        name: Test frontend
+        run: |
+          cd frontend/
+          npm run test
+  build_frontend_and_push_to_docker_hub:
+    name: Push frontend Docker image to Dockerhub
+    runs-on: ubuntu-latest
+    needs:
+      - frontend_tests
+    steps:
+      -
+        name: Check out the repo
+        uses: actions/checkout@v3
+      -
+        name: Set up Docker
+        uses: docker/setup-buildx-action@v2
+      - 
+        name: Login Docker
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASS }}
+      -
+        name: Push frontend to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/taski_frontend:latest
+  build_gateway_and_push_to_docker_hub:
+    name: Push gateway Docker image to DockerHub
+    runs-on: ubuntu-latest
+
+    steps:
+      -
+        name: Check out the repo
+        uses: actions/checkout@v3
+      -
+        name: Set up Docker
+        uses: docker/setup-buildx-actiom@v2
+      -
+        name: Login Docker
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASS }}
+      -
+        name: Push gateway to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./gateway/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/taski_gateway:latest
+
+
+
 
  
