Add fixed dependencies frontend test.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,7 +82,7 @@ jobs:
       -
         name: Install dependencies
         run: |
-          cd frondend/
+          cd frontend/
           npm ci
       -
         name: Test frontend
