--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -177,7 +177,20 @@ jobs:
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
             sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
-
+  send_message:
+    name: Semd message when deploy success work
+    runs-on: ubumtu-latest
+    needs:
+      - deploy
+    
+    steps:
+      -
+        name: Send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_ID }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: Деплой успешно выполнен!
 
 
 
